2014-09-12  Holger Seelig  <holger.seelig@yahoo.de>

	* ChangeLog:
	* InputFileStream.cpp: 

2014-09-12  Holger Seelig  <holger.seelig@yahoo.de>

	* InputFileStream.cpp: 

2014-09-12  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* Base64.h:
	* libtitania-stream.cproj:
	* Base64.cpp:
	* InputFileStream.cpp: 

2014-08-22  Holger Seelig  <holger.seelig@yahoo.de>

	* InputUrlStream.cpp: 

2014-07-15  Holger Seelig  <holger.seelig@yahoo.de>

	* InputUrlStream.cpp: 

2014-05-30  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-stream.cproj: 

2014-05-11  Holger Seelig  <holger.seelig@yahoo.de>

	* UrlStreamBuf.cpp: 

2014-04-06  Holger Seelig  <holger.seelig@yahoo.de>

	* InputFileStream.cpp: 

2014-03-13  Holger Seelig  <holger.seelig@yahoo.de>

	* InputUrlStream.cpp: 

2013-11-21  Holger Seelig  <holger.seelig@yahoo.de>

	* InputUrlStream.cpp:
	* InputFileStream.cpp: 

2013-10-25  Holger Seelig  <holger.seelig@yahoo.de>

	* UrlStreamBuf.h:
	* UrlStreamBuf.cpp: 

2013-10-12  Holger Seelig  <holger.seelig@yahoo.de>

	* UrlStreamBuf.cpp:
	* InputFileStream.cpp: 

2013-10-11  Holger Seelig  <holger.seelig@yahoo.de>

	* UrlStreamBuf.h:
	* UrlStreamBuf.cpp:
	* InputUrlStream.h:
	* InputFileStream.h:
	* InputUrlStream.cpp:
	* InputFileStream.cpp: 

2013-10-09  Holger Seelig  <holger.seelig@yahoo.de>

	* UrlStreamBuf.cpp: 

2013-10-07  Holger Seelig  <holger.seelig@yahoo.de>

	* InputFileStream.cpp: 

2013-10-07  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-stream.cproj:
	* GZFilterBuf.h:
	* UrlStreamBuf.h:
	* GZFilterBuf.cpp:
	* InputUrlStream.h:
	* UrlStreamBuf.cpp:
	* InputFileStream.h:
	* InputUrlStream.cpp:
	* InputFileStream.cpp: 

2013-09-28  Holger Seelig  <holger.seelig@yahoo.de>

	* InputFileStream.cpp: 

2013-09-26  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-stream.md.pc:
	* UrlStreamBuf.cpp:
	* InputFileStream.cpp: 

2013-09-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am: