@@ -1,3 +1,7 @@
+2014-10-16  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* InputFileStream.cpp: 
+
 2014-09-12  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* ChangeLog:
